Add Selenium screenshot extension